--- a/css/style.css
+++ b/css/style.css
@@ -122,6 +122,15 @@ iframe
  flex-direction: column;
  margin-bottom: 5em;
 }
+.iframe-container {
+ display: flex;
+ justify-content: space-between;
+}
+.iframe-details,
+.iframe-main {
+ width: 48%;
+}
+
 .iframe-section h1 {
  font-size: 2rem;
 }
@@ -189,9 +198,9 @@ highlights section
  width: 300px;
 }
 /* -----------------------------------
-Media queries
+Media queries Mobile Devices
 ------------------------------------ */
-@media screen and (max-width: 460px) {
+@media screen and (max-width: 688px) {
  /* header and nav media queries */
  .navbar ul {
   display: none;
@@ -217,12 +226,18 @@ Media queries
   width: 100%;
   margin-top: 2em;
  }
- .iframe-section {
-  display: none;
- }
+
  /* players grid section media queries */
  .players-section {
   grid-template-columns: repeat(1, 1fr);
+ }
+ /* Iframe section */
+ .iframe-container {
+  flex-direction: column;
+ }
+ .iframe-details,
+ .iframe-main {
+  width: 100%;
  }
  /* Highlights Section media queries */
  .highlights-section {
@@ -234,5 +249,66 @@ Media queries
  }
  .highlights-image {
   margin-top: 1.5em;
+ }
+ /* sponsors section */
+ .sponsor-showcase {
+  grid-template-columns: repeat(2, 1fr);
+ }
+}
+/* -------------------------------------
+Media Queries Tab Devices 
+---------------------------------------*/
+@media screen and (min-width: 688px) and (max-width: 992px) {
+ .navbar ul {
+  display: none;
+ }
+ .login-btn {
+  margin-top: 1em;
+ }
+ .fa-bars {
+  display: block;
+ }
+ .header-content {
+  flex-direction: column;
+  justify-content: center;
+  min-height: 90vh;
+ }
+ .header-text {
+  width: 100%;
+ }
+ .header-text h1 {
+  font-size: 2.5rem;
+ }
+ .header-image {
+  width: 100%;
+  margin-top: 2em;
+ }
+
+ /* players grid section media queries */
+ .players-section {
+  grid-template-columns: repeat(2, 1fr);
+ }
+ /* Iframe section */
+ .iframe-container {
+  flex-direction: column;
+ }
+ .iframe-details,
+ .iframe-main {
+  width: 100%;
+ }
+ /* Highlights Section media queries */
+ .highlights-section {
+  flex-direction: column;
+ }
+ .highlights-text,
+ .highlights-image {
+  width: 100%;
+ }
+ .highlights-image {
+  margin-top: 1.5em;
+ }
+ /* sponsors section */
+ .sponsor-showcase {
+  grid-template-columns: repeat(2, 1fr);
  }
 }
